src/objects/Activity_Type__c.object
<CustomObject>
    <description>Contains Activity Types and attributes</description>
    <fields>
        <fullName>Outcome_Count__c</fullName>
        <label>Outcome Count</label>
        <summaryForeignKey>Activity_Outcomes__c.Activity_Type__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAType__c</fullName>
        <description>Defines the units (ie business days, calendar days) that apply to the value entered in the SLA field.</description>
        <label>SLA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calendar days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Request_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Request Type</label>
        <referenceTo>ServiceRequestType__c</referenceTo>
        <relationshipLabel>Activity Types</relationshipLabel>
        <relationshipName>Activity_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Short_Name__c</fullName>
        <label>Task Short Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Activity Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Task_Short_Name__c</columns>
        <columns>Service_Request_Type__c</columns>
        <columns>Outcome_Count__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enforce_Unique_ActivityType_Code</fullName>
        <active>true</active>
        <description>Restrict creation of duplicate activity type codes.</description>
        <errorConditionFormula>IF(ISNEW(), IF( UPPER(Name) == UPPER(VLOOKUP( $ObjectType.Activity_Type__c.Fields.Name , $ObjectType.Activity_Type__c.Fields.Name , Name)),true , false),AND(ISCHANGED(Name), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.Activity_Type__c.Fields.Name,$ObjectType.Activity_Type__c.Fields.Name, Name)),true,false)))</errorConditionFormula>
        <errorMessage>Task Code (Activity Type Name) cannot have duplicate value</errorMessage>
    </validationRules>
</CustomObject>